--- a/style.css
+++ b/style.css
@@ -151,8 +151,10 @@ header {
 
 /* ===== todo list input Section ===== */
 #js-input {
+  flex: 1;
   border: 1px solid black;
-  width: 200px;
+  min-width: 180px;
+  max-width: 200px;
   height: 40px;
   border-radius: 15px;
   padding: 5px 10px;
@@ -166,36 +168,47 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px; 
+  flex-wrap: wrap;
+  gap: 10px;
+  width: 100%;
+  margin-top: 20px; 
 }
 
-.input-container input {
+.input-section {
   flex: 1;
   min-width: 150px;
   max-width: 300px;
 }
 
 
-@media (max-width: 600px) {
-  .input-container {
-    flex-direction: column; 
-    align-items: stretch;
+@media (max-width: 400px) {
+  .input-section {
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
   }
 
-  .input-container input,
-  .input-container button {
+  .input-section input {
     width: 100%;
+  }
+
+  .input-section button {
+    flex: 1;
   }
 }
 
+
+
 /* ===== todo list button Section ===== */
 #js-button {
+  padding: 10px 15px;
   width: 90px;
   height: 30px;
   border-radius: 5px;
   border: 1px solid black;
   color: black;
   background-color: royalblue;
+  cursor: pointer;
 }
 
 #js-button:hover {
@@ -204,18 +217,19 @@ header {
 
 /* ===== todo list button Section ===== */
 #js-reset {
+  padding: 10px 15px;
   background-color: lightgreen;
   color: black;
   border: 1px solid black;
   border-radius: 5px;
   width: 90px;
   height: 30px;
+  cursor: pointer;
 }
 
 #js-reset:hover {
   background-color: gray;
 }
-
 /* ===== todo list button Section ===== */
 #js-delete {
   background-color: red;
@@ -334,5 +348,6 @@ html {
   background-color: royalblue;
   transform: translateY(-5px);
 }
+
 
 
