--- a/style.css
+++ b/style.css
@@ -150,65 +150,37 @@ header {
 }
 
 /* ===== todo list input Section ===== */
+.input-section {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;      
+  gap: 10px;             
+  flex-wrap: nowrap;     
+  overflow-x: auto;      /* allows scrolling if it’s too wide on phone */
+  width: 100%;
+  padding: 0 10px;       
+}
+
+
+/* ===== todo list input Section ===== */
 #js-input {
-  flex: 1;
   border: 1px solid black;
-  min-width: 180px;
-  max-width: 200px;
+  width: 200px;
   height: 40px;
   border-radius: 15px;
   padding: 5px 10px;
   margin-top: 100px;
-  margin-left: 90px;
   text-align: center;
 }
 
-/* ===== responsive input section ===== */
-.input-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 10px;
-  width: 100%;
-  margin-top: 20px; 
-}
-
-.input-section {
-  flex: 1;
-  min-width: 150px;
-  max-width: 300px;
-}
-
-
-@media (max-width: 400px) {
-  .input-section {
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-
-  .input-section input {
-    width: 100%;
-  }
-
-  .input-section button {
-    flex: 1;
-  }
-}
-
-
-
 /* ===== todo list button Section ===== */
 #js-button {
-  padding: 10px 15px;
   width: 90px;
   height: 30px;
   border-radius: 5px;
   border: 1px solid black;
   color: black;
   background-color: royalblue;
-  cursor: pointer;
 }
 
 #js-button:hover {
@@ -217,19 +189,18 @@ header {
 
 /* ===== todo list button Section ===== */
 #js-reset {
-  padding: 10px 15px;
   background-color: lightgreen;
   color: black;
   border: 1px solid black;
   border-radius: 5px;
   width: 90px;
   height: 30px;
-  cursor: pointer;
 }
 
 #js-reset:hover {
   background-color: gray;
 }
+
 /* ===== todo list button Section ===== */
 #js-delete {
   background-color: red;
@@ -348,6 +319,7 @@ html {
   background-color: royalblue;
   transform: translateY(-5px);
 }
+
 
 
 
