update for responsiveness on mobile

--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ header {
   border: 1px solid black;
   color: black;
   background-color: royalblue;
+  margin-top: 90px
 }
 
 #js-button:hover {
@@ -319,6 +320,7 @@ html {
   background-color: royalblue;
   transform: translateY(-5px);
 }
+
 
 
 
