update for responsiveness on mobile

--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@ header {
 
 /* ===== todo list input Section ===== */
 .input-section {
+  display: flex;
   align-items: center;
   margin-top: 100px;      
   gap: 10px;             
@@ -163,7 +164,6 @@ header {
 
 /* ===== todo list input Section ===== */
 #js-input {
-  display: flex;
   border: 1px solid black;
   width: 200px;
   height: 40px;
@@ -175,7 +175,6 @@ header {
 
 /* ===== todo list button Section ===== */
 #js-button {
-  display: flex;
   width: 90px;
   height: 30px;
   border-radius: 5px;
@@ -212,10 +211,11 @@ header {
   width: 100px;
   height: 20px;
   border: 1px solid black;
+  flex-direction: column;
 }
 
 #array-lists {
-  margin-left: 100px;
+  margin-left: 0;
 }
 
 /* ===== todolist body Section ===== */
@@ -322,6 +322,7 @@ html {
   background-color: royalblue;
   transform: translateY(-5px);
 }
+
 
 
 
