--- a/style.css
+++ b/style.css
@@ -215,6 +215,7 @@ header {
 
 #array-lists {
   display: flex;
+  flex-direction: column;
   margin-left: 0;
   
 }
@@ -323,6 +324,7 @@ html {
   background-color: royalblue;
   transform: translateY(-5px);
 }
+
 
 
 
