--- a/style.css
+++ b/style.css
@@ -343,6 +343,7 @@ display: grid;
 gap: 10px;
 grid-template-columns: auto auto auto auto;
 width: 300px;
+height: 200px;
 margin-left: 20px;
 background-color: gray;
 border-radius: 10px;
@@ -351,13 +352,14 @@ border: 1px solid black;
 
 .btn {
   color: black;
-  background-color: blue;
+  background-color: skyblue;
   border-radius: 10px;
 }
 
 .btn :hover {
   background-color: green;
 }
+
 
 
 
